--- a/package.json
+++ b/package.json
@@ -33,17 +33,15 @@
     "seed": "node --loader ts-node/esm prisma/seed.mts"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "@sentry/nextjs": "^7.112.2",
-    "mongodb": "^5.0.0",
-    "next": "14.2.3",
-    "next-auth": "^4.24.5"
+    "@sentry/nextjs": "^8.10.0",
+    "next": "14.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/eslint-parser": "^7.23.3",
     "@faker-js/faker": "^8.4.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.1.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.16.2",
     "@types/json-schema": "^7.0.15",
@@ -56,6 +54,8 @@
     "eslint-config-next": "14.0.4",
     "husky": "^9.0.11",
     "lodash": "^4.17.21",
+    "mongodb": "^5.0.0",
+    "next-auth": "^4.24.5",
     "nodemailer": "^6.9.8",
     "prettier": "^3.2.4",
     "prisma": "^5.14.0",
